Переписал документацию. Исправил миграции. Добавил Dockerfile и docker-compose.yml